[build-system]
requires = ["hatchling>=1.18", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "kbplacer"
version = "0.6.0"
authors = [
  { name="adamws", email="adamws@users.noreply.github.com" },
]
description = "KiCad plugin for automatic keyboard's key placement"
keywords = ["kicad"]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Manufacturing",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)"
]
dynamic = ["readme"]

[project.urls]
"Homepage" = "https://github.com/adamws/kicad-kbplacer"
"Bug Tracker" = "https://github.com/adamws/kicad-kbplacer/issues"

[project.scripts]
kbplacer = "kbplacer.__main__:app"

[tool.hatch]
build.targets.sdist.include = [
  "kbplacer/*.py"
]
build.targets.sdist.exclude = [
  "kbplacer/kbplacer_plugin_action.py"
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
  { text = "KiCad plugin for mechanical keyboard design.\n" },
  { text = "https://github.com/adamws/kicad-kbplacer" },
]

[tool.ruff]
select = ["ANN", "E", "F", "I", "N", "PL", "W"]

[tool.ruff.per-file-ignores]
"kbplacer/kbplacer_plugin_action.py" = ["N802"]
