[build-system]
requires = [
  "hatchling>=1.18",
  "hatch-kicad",
  "hatch-fancy-pypi-readme",
  "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "kbplacer"
authors = [
  { name = "adamws", email = "adamws@users.noreply.github.com" },
]
description = "KiCad plugin for automatic keyboard's key placement"
keywords = ["kicad"]
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Manufacturing",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)"
]
dynamic = ["readme", "version"]

[project.urls]
"Homepage" = "https://github.com/adamws/kicad-kbplacer"
"Bug Tracker" = "https://github.com/adamws/kicad-kbplacer/issues"
"Sponsor" = "https://ko-fi.com/adamws"

[project.scripts]
kbplacer = "kbplacer.__main__:app"

[tool.hatch]
build.targets.sdist.include = [
  "kbplacer/*.py"
]
build.targets.sdist.exclude = [
  "kbplacer/kbplacer_plugin_action.py"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "kbplacer/version.txt"

[tool.hatch.build.targets.kicad-package]
name = "Keyboard footprints placer"
description = "Plugin for mechanical keyboard design"
description_full = [
  "Plugin for mechanical keyboard design.\n",
  "It features automatic key placement and routing based on various ",
  "layout descriptions like <a href='www.keyboard-layout-editor.com'>kle</a>, ",
  "<a href='www.github.com/ergogen/ergogen'>ergogen</a> and ",
  "<a href='www.caniusevia.com'>via</a>.\n",
  "To learn more visit project's homepage.",
]
identifier = "com.github.adamws.kicad-kbplacer"
author = { name = "adamws", web="https://adamws.github.io" }
tags = ["keyboard"]
status = "{env:KBPLACER_KICAD_STATUS:development}"
kicad_version = "6.0"
sources = ["kbplacer", "dist"] # rewrite paths
include = [
  "kbplacer/*.py",
  "kbplacer/version.txt",
  "kbplacer/icon.png",
]
artifacts = ["dist/locale"] # generated by `release/hatch_translate.py` hook
icon = "resources/icon.png"
download_url = "{env:KBPLACER_KICAD_RELEASE_URL:https://adamws.github.io/kicad-kbplacer/{zip_name}}"

[tool.hatch.build.targets.kicad-package.hooks.custom]
path = "release/hatch_translate.py"

[tool.hatch.build.targets.kicad-package.hooks.kicad-repository]
enable-by-default = false

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
  { text = "KiCad plugin for mechanical keyboard design.\n" },
  { text = "https://github.com/adamws/kicad-kbplacer" },
]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:kbplacer tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 88

[tool.ruff]
select = ["ANN", "E", "F", "I", "N", "PL", "W"]

[tool.ruff.per-file-ignores]
"kbplacer/kbplacer_plugin_action.py" = ["N802"]

[tool.ruff.isort]
known-first-party = ["hatch_kicad"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.coverage.run]
relative_files = true
