[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atopile-example"
dynamic = ["version"]
description = 'Keyboard using atopile'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "adamws", email = "adamws@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.1.0"
dependencies = [
  "atopile==0.9.8",
  "kbplacer==0.13",
]

